--- a/An introduction to likelihood-free inference.ipynb
+++ b/An introduction to likelihood-free inference.ipynb
@@ -18,6 +18,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = 4"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5370,9 +5381,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.6.0",
+   "display_name": "Julia 0.6.0-debug",
    "language": "julia",
-   "name": "julia-0.6"
+   "name": "julia-0.6-debug"
   },
   "language_info": {
    "file_extension": ".jl",
