--- a/An introduction to likelihood-free inference.ipynb
+++ b/An introduction to likelihood-free inference.ipynb
@@ -1699,21 +1699,25 @@
     "PyPlot.plot(x_c1,priordens_c1, \"g\");\n",
     "PyPlot.plot((problem.model_param.theta_true[1], problem.model_param.theta_true[1]), (0, maximum(h1_abc_reject.density)), \"k\");\n",
     "PyPlot.xlabel(L\"$A$\");\n",
+    "axis([minimum(h1_abc_reject.x), maximum(h1_abc_reject.x), 0, maximum(h1_abc_reject.density)+0.1]);\n",
     "subplot(222);\n",
     "PyPlot.plot(h2_abc_reject.x,h2_abc_reject.density, \"b\");\n",
     "PyPlot.plot(x_c2,priordens_c2, \"g\");\n",
     "PyPlot.plot((problem.model_param.theta_true[2], problem.model_param.theta_true[2]), (0, maximum(h2_abc_reject.density)), \"k\");\n",
     "PyPlot.xlabel(L\"$B$\");\n",
+    "axis([minimum(h2_abc_reject.x), maximum(h2_abc_reject.x), 0, maximum(h2_abc_reject.density)+0.1]);\n",
     "subplot(223);\n",
     "PyPlot.plot(h3_abc_reject.x,h3_abc_reject.density, \"b\");\n",
     "PyPlot.plot(x_c3,priordens_c3, \"g\");\n",
     "PyPlot.plot((problem.model_param.theta_true[3], problem.model_param.theta_true[3]), (0, maximum(h3_abc_reject.density)), \"k\");\n",
     "PyPlot.xlabel(L\"$g$\");\n",
+    "axis([minimum(h3_abc_reject.x), maximum(h3_abc_reject.x), 0, maximum(h3_abc_reject.density)+0.1]);\n",
     "subplot(224);\n",
     "PyPlot.plot(h4_abc_reject.x,h4_abc_reject.density, \"b\");\n",
     "PyPlot.plot(x_c4,priordens_c4, \"g\");\n",
     "PyPlot.plot((problem.model_param.theta_true[4], problem.model_param.theta_true[4]), (0, maximum(h4_abc_reject.density)), \"k\");\n",
-    "PyPlot.xlabel(L\"$k$\");"
+    "PyPlot.xlabel(L\"$k$\");\n",
+    "axis([minimum(h4_abc_reject.x), maximum(h4_abc_reject.x), 0, maximum(h4_abc_reject.density)+0.1]);\n"
    ]
   },
   {
@@ -2521,22 +2525,26 @@
     "PyPlot.plot((problem.model_param.theta_true[1], problem.model_param.theta_true[1]), (0, maximum(h1_abcmcmc.density)), \"k\");\n",
     "PyPlot.ylabel(\"Density\");\n",
     "PyPlot.xlabel(L\"$A$\");\n",
+    "axis([minimum(h1_abcmcmc.x), maximum(h1_abcmcmc.x), 0, maximum(h1_abcmcmc.density)+0.1]);\n",
     "subplot(222);\n",
     "PyPlot.plot(h2_abcmcmc.x,h2_abcmcmc.density, \"b\");\n",
     "PyPlot.plot(x_c2,priordens_c2, \"g\");\n",
     "PyPlot.plot((problem.model_param.theta_true[2], problem.model_param.theta_true[2]), (0, maximum(h2_abcmcmc.density)), \"k\");\n",
-    "PyPlot.xlabel(L\"$B$\");\n",
+    "PyPlot.xlabel(L\"$B$\")\n",
+    "axis([minimum(h2_abcmcmc.x), maximum(h2_abcmcmc.x), 0, maximum(h2_abcmcmc.density)+0.1]);\n",
     "subplot(223);\n",
     "PyPlot.plot(h3_abcmcmc.x,h3_abcmcmc.density, \"b\");\n",
     "PyPlot.plot(x_c3,priordens_c3, \"g\");\n",
     "PyPlot.plot((problem.model_param.theta_true[3], problem.model_param.theta_true[3]), (0, maximum(h3_abcmcmc.density)), \"k\");\n",
     "PyPlot.ylabel(\"Density\");\n",
     "PyPlot.xlabel(L\"$g$\");\n",
+    "axis([minimum(h3_abcmcmc.x), maximum(h3_abcmcmc.x), 0, maximum(h3_abcmcmc.density)+0.1]);\n",
     "subplot(224);\n",
     "PyPlot.plot(h4_abcmcmc.x,h4_abcmcmc.density, \"b\");\n",
     "PyPlot.plot(x_c4,priordens_c4, \"g\");\n",
     "PyPlot.plot((problem.model_param.theta_true[4], problem.model_param.theta_true[4]), (0, maximum(h4_abcmcmc.density)), \"k\");\n",
-    "PyPlot.xlabel(L\"$k$\");"
+    "PyPlot.xlabel(L\"$k$\");\n",
+    "axis([minimum(h4_abcmcmc.x), maximum(h4_abcmcmc.x), 0, maximum(h4_abcmcmc.density)+0.1]);\n"
    ]
   },
   {
@@ -3767,22 +3775,26 @@
     "PyPlot.plot((problem.model_param.theta_true[1], problem.model_param.theta_true[1]), (0, maximum(h1_mcmc.density)), \"k\");\n",
     "PyPlot.ylabel(\"Density\");\n",
     "PyPlot.xlabel(L\"$A$\");\n",
+    "axis([minimum(h1_mcmc.x), maximum(h1_mcmc.x), 0, maximum(h1_mcmc.density)+0.1]);\n",
     "subplot(222);\n",
     "PyPlot.plot(h2_mcmc.x,h2_mcmc.density, \"b\");\n",
     "PyPlot.plot(x_c2,priordens_c2, \"g\");\n",
     "PyPlot.plot((problem.model_param.theta_true[2], problem.model_param.theta_true[2]), (0, maximum(h2_mcmc.density)), \"k\");\n",
     "PyPlot.xlabel(L\"$B$\");\n",
+    "axis([minimum(h2_mcmc.x), maximum(h2_mcmc.x), 0, maximum(h2_mcmc.density)+0.1]);\n",
     "subplot(223);\n",
     "PyPlot.plot(h3_mcmc.x,h3_mcmc.density, \"b\");\n",
     "PyPlot.plot(x_c3,priordens_c3, \"g\");\n",
     "PyPlot.plot((problem.model_param.theta_true[3], problem.model_param.theta_true[3]), (0, maximum(h3_mcmc.density)), \"k\");\n",
     "PyPlot.ylabel(\"Density\");\n",
     "PyPlot.xlabel(L\"$g$\");\n",
+    "axis([minimum(h3_mcmc.x), maximum(h3_mcmc.x), 0, maximum(h3_mcmc.density)+0.1]);\n",
     "subplot(224);\n",
     "PyPlot.plot(h4_mcmc.x,h4_mcmc.density, \"b\");\n",
     "PyPlot.plot(x_c4,priordens_c4, \"g\");\n",
     "PyPlot.plot((problem.model_param.theta_true[4], problem.model_param.theta_true[4]), (0, maximum(h4_mcmc.density)), \"k\");\n",
-    "PyPlot.xlabel(L\"$k$\");\n"
+    "PyPlot.xlabel(L\"$k$\");\n",
+    "axis([minimum(h4_mcmc.x), maximum(h4_mcmc.x), 0, maximum(h4_mcmc.density)+0.1]);\n"
    ]
   },
   {
@@ -5079,9 +5091,9 @@
     }
    ],
    "source": [
-    "x_c1 = problem.prior_dist.prior_parameters[1,1]-0.5:0.01:problem.prior_dist.prior_parameters[1,2]+0.5;\n",
-    "x_c2 = problem.prior_dist.prior_parameters[2,1]-0.5:0.01:problem.prior_dist.prior_parameters[2,2]+0.5;\n",
-    "x_c3 = problem.prior_dist.prior_parameters[3,1]-0.5:0.01:problem.prior_dist.prior_parameters[3,2]+0.5;\n",
+    "x_c1 = problem.prior_dist.prior_parameters[1,1]-0.1:0.01:problem.prior_dist.prior_parameters[1,2]+0.1;\n",
+    "x_c2 = problem.prior_dist.prior_parameters[2,1]-0.1:0.01:problem.prior_dist.prior_parameters[2,2]+0.1;\n",
+    "x_c3 = problem.prior_dist.prior_parameters[3,1]-0.1:0.01:problem.prior_dist.prior_parameters[3,2]+0.1;\n",
     "\n",
     "x_c1_kerneldens = x_c1;\n",
     "x_c2_kerneldens = x_c2;\n",
